# Graphics-Renderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: AABB.hpp  BVH.hpp  Box.hpp  Camera.hpp  Hitable.hpp  HitableList.hpp  Light.hpp  Material.hpp  Media.hpp  Perlin.hpp  Ray.hpp  Rect.hpp  Sphere.hpp  Texture.hpp  Transform.hpp  Utils.hpp  vec3.hpp
src/: BVH.cpp  Utils.cpp  main.cpp
src/alg/: CMakeLists.txt  PPM.cpp  PPM.hpp  PathTracing.cpp  PathTracing.hpp  RenderAlg.hpp
src/core/: CMakeLists.txt  Camera.cpp  Camera.hpp  Light.hpp  Ray.hpp
src/geometric/: CMakeLists.txt  Curve.cpp  Curve.hpp  Hitable.hpp  HitableList.cpp  HitableList.hpp  Mesh.cpp  Mesh.hpp  Rect.cpp  Rect.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
src/geometric/wrapper/: Media.cpp  Media.hpp  Transform.cpp  Transform.hpp
src/scene/: AABB.cpp  AABB.hpp  BVH.cpp  CMakeLists.txt  Material.hpp  Perlin.cpp  Perlin.hpp  Texture.hpp
src/utils/: BezierFunc.cpp  BezierFunc.hpp  CMakeLists.txt  Controller.cpp  Controller.hpp  ONB.hpp  PDF.hpp  PPM.cpp  PPM.hpp  Parser.cpp  Parser.hpp  Render.hpp  Utils.cpp  Utils.hpp
testcases/: beizer.json  cube_cornell_box.json  dinosaur_conell_box.json  dof_cornell_box.json  final.json  image.json  mesh.json  ppm.json  ppm_final.json  simple_cornell_box.json  sphere_cornell_box.json  two_sphere.json
