CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(PT)

OPTION(DEBUG "options for debug" OFF)
IF(DEBUG)
    ADD_DEFINITIONS(-DDEBUG)
ENDIF()

IF(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE Release)
ENDIF()

set(LIBS core geometric scene utils)

ADD_SUBDIRECTORY(deps/vecmath)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/geometric/wrapper)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/deps/vecmath/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/deps)

foreach(lib ${LIBS})
    message(${CMAKE_CURRENT_SOURCE_DIR}/src/${lib})
    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/${lib})
endforeach()

foreach(lib ${LIBS})
    ADD_SUBDIRECTORY(src/${lib})
endforeach()


SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -Wall")

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

message(*********)
get_property(p TARGET utils PROPERTY INCLUDE_DIRECTORIES)
foreach(d ${p})
    message(${d})
endforeach()

ADD_EXECUTABLE(${PROJECT_NAME} main.cpp)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} vecmath ${LIBS})